Fixed plugin section alignment

--- a/css/custom.css
+++ b/css/custom.css
@@ -58,12 +58,11 @@ body {
 	margin: 0 !important;
 }
 
-.col-border-right {
-	border-right: 1px dotted rgba(255, 255, 255, 0.6);
-}
-
-.col-border-left {
-	border-left: 1px dotted rgba(255, 255, 255, 0.6);
+.plugin-divider {
+	max-width: 0;
+	border-left: 1px solid rgba(255, 255, 255, 0.6);
+	margin: 0;
+	padding: 0;
 }
 
 .navbar-brand:visited {
